# pastebin

./: .gitignore  Cargo.toml  Dockerfile  README.md  api.fbs  docker-compose.yml
.github/workflows/: docker-image.yml  rust.yml
contrib/: decode_paste.py
src/: api_generated.rs  formatter.rs  lib.rs  main.rs  plugins.rs  util.rs
src/plugins/: prism.rs
static/: custom.css  custom.js  index.html  prism-coldark-pb.css  prism-material-dark.css  prism-one-light-pb.css  prism.css  prism.js
