[package]
name = "pastebin"
version = "0.2.0"
authors = ["Kaczanowski Mateusz <kaczanowski.mateusz@gmail.com>", "Gavin Troy <gavin@nologout.com>"]
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
regex = "1"
humantime = "2.1.0"
rocksdb = "0.22.0"
nanoid = "0.4.0"
flatbuffers = "24.3.25"
structopt = "0.3.26"
structopt-derive = "0.4.18"
num_cpus = "1.16"
handlebars = "6.2.0"
tempdir = "0.3.7"
speculate2 = "0.2.0"
chrono = "0.4.38"
timeago = "0.4.2"
serde_json = "1.0.133"
sha2 = "0.10.8"
hmac = "0.12.1"
ubyte = "0.10"
