[package]
name = "pastebin"
version = "0.2.3"
authors = ["Kaczanowski Mateusz <kaczanowski.mateusz@gmail.com>", "Gavin Troy <gavin@nologout.com>"]
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["tls"] }
regex = "1"
humantime = "2.3.0"
rocksdb = "0.24.0"
nanoid = "0.5.0"
flatbuffers = "25.12.19"
structopt = "0.3.26"
structopt-derive = "0.4.18"
num_cpus = "1.17"
handlebars = "6.4.1"
tempdir = "0.3.7"
speculate2 = "0.2.0"
chrono = "0.4.45"
timeago = "0.6.0"
serde_json = "1.0.150"
sha2 = "0.11.0"
hmac = "0.13.0"
ubyte = "0.10"
phf = { version = "0.13.1", features = ["macros"] }
